<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logoUTN"
            android:layout_width="111dp"
            android:layout_height="101dp"
            app:srcCompat="@drawable/utn_logo" />

        <TextView
            android:id="@+id/textoBanco"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/banco_titulo"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTasaNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/campo_tasa_nom"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/editTasaNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textTasaEf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/campo_tasa_ef" />

        <EditText
            android:id="@+id/editTasaEf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textCapitalInvertir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/campo_capital" />

        <EditText
            android:id="@+id/editCapitalInvertir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarMeses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="12"
        android:progress="1" />

    <TextView
        android:id="@+id/textoDias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="  30 dias" />

    <CheckBox
        android:id="@+id/checkBoxRenovacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/renovacion" />

    <TextView
        android:id="@+id/textoSimulador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulador"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textoPlazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plazo" />

    <TextView
        android:id="@+id/textoCapital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capital" />

    <TextView
        android:id="@+id/textoIntereses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intereses" />

    <TextView
        android:id="@+id/textoMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monto_tot" />

    <TextView
        android:id="@+id/textoMontoAnual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monto_tot_anual" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/botonConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_confirmar" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>